# KotlinStrong

./: .gitignore  README.md  build.gradle  config.gradle  gradle.properties  screenMatch.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: picture_new_item_select_bg.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_options.xml  activity_splash.xml  fragment_app_menu.xml  fragment_first.xml  fragment_home.xml  item_ads.xml  item_app_menu_child.xml  item_app_menu_text.xml  item_article.xml  item_head_ads.xml  layout_app_menu_ads.xml  layout_error.xml  layout_head_ads.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml  styles.xml
app/src/main/res/values-sw160dp/: dimens.xml
app/src/main/res/values-sw240dp/: dimens.xml
app/src/main/res/values-sw280dp/: dimens.xml
app/src/main/res/values-sw420dp/: dimens.xml
baselib/: build.gradle.kts
baselib/src/main/res/values/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
jks/: yoojin.jks
stronglib/: build.gradle
stronglib/src/main/: AndroidManifest.xml
stronglib/src/main/cpp/: CMakeLists.txt  Encrypt.cpp  LogUtils.cpp  Signature.cpp  SystemUtils.cpp  signature.cpp
stronglib/src/main/cpp/utils/: LogUtils.h  SystemUtils.h
stronglib/src/main/res/values/: strings.xml
stronglib/src/main/res/values-night/: colors.xml
yoojin/: build.gradle
yoojin/src/main/: AndroidManifest.xml
yoojin/src/main/cpp/: CMakeLists.txt  Encrypt.cpp  Signature.cpp
yoojin/src/main/cpp/utils/: LogUtils.h
yoojin/src/main/json/: banner.json  login.json  splash.json  user.json
yoojin/src/main/res/drawable/: picture_new_item_select_bg.xml  selected_main_bottom_home.xml  selected_main_bottom_me.xml  selected_main_bottom_sort.xml  shape_bounce_line.xml
yoojin/src/main/res/drawable-hdpi/: login_guide_text_right_black.xml  login_guide_text_right_end.xml
yoojin/src/main/res/layout/: activity_launch.xml  activity_login_guide.xml  activity_main.xml  activity_setting_font.xml  fragment_home.xml  fragment_me.xml  fragment_sort.xml  fragment_splash.xml  fragment_tab.xml  fragment_tab1.xml  fragment_tab2.xml  include_status.xml  include_toolbar.xml  item_home_banner.xml  item_home_menu_child.xml  (+5 more)
(+274 files in other folders)
